symble.output
Terminals unused in grammar

    BOOLEAN_TYPE


Grammar

    0 $accept: program $end

    1 program: unit_definitions

    2 unit_definitions: unit_definitions unit_definition
    3                 | unit_definition

    4 unit_definition: procedure_definition
    5                | function_definition

    6 procedure_definition: procedure_head block

    7 function_definition: function_head block

    8 procedure_head: procedure_id params_list

    9 function_head: function_id params_list RARROW type_expression

   10 procedure_id: PROCEDURE IDENTIFIER

   11 function_id: FUNCTION IDENTIFIER

   12 params_list: LPAREN params RPAREN

   13 block: block_start block_rest

   14 block_start: LBRACE

   15 block_rest: statements RBRACE

   16 params: params COMMA param
   17       | param
   18       | ε

   19 param: variable_declaration

   20 type_expression: INT1_TYPE
   21                | UINT1_TYPE
   22                | INT2_TYPE
   23                | UINT2_TYPE
   24                | INT4_TYPE
   25                | UINT4_TYPE
   26                | INT8_TYPE
   27                | UINT8_TYPE
   28                | ADDRESS_TYPE LPAREN type_expression RPAREN

   29 statements: statements statement
   30           | statement

   31 statement: initialized_variable_declaration_statement
   32          | variable_declaration_statement
   33          | assignment_statement
   34          | procedure_call_statement
   35          | conditional_statement
   36          | iteration_statement
   37          | return_statement
   38          | block

   39 initialized_variable_declaration_statement: variable_declaration LARROW expression PERIOD

   40 variable_declaration_statement: variable_declaration PERIOD

   41 assignment_statement: IDENTIFIER LARROW expression PERIOD
   42                     | expression RARROW IDENTIFIER PERIOD

   43 procedure_call_statement: RUN IDENTIFIER LPAREN args RPAREN PERIOD

   44 conditional_statement: condition_head block ELSE block
   45                      | condition_head block

   46 condition_head: IF LPAREN expression RPAREN

   47 iteration_statement: WHILE LPAREN expression RPAREN LBRACE expression RBRACE
   48                    | FOR LPAREN variable_declaration FROM expression TO expression BY expression LBRACE statements RBRACE

   49 return_statement: RETURN expression PERIOD

   50 variable_declaration: IDENTIFIER COLON type_expression

   51 expression: arithmetic_expression
   52           | relational_expression
   53           | logical_expression
   54           | function_call_expression
   55           | dereference_expression
   56           | MINUS expression
   57           | NUMBER
   58           | IDENTIFIER
   59           | LPAREN expression RPAREN

   60 arithmetic_expression: expression PLUS expression
   61                      | expression MINUS expression
   62                      | expression TIMES expression
   63                      | expression DIV expression
   64                      | expression MOD expression

   65 relational_expression: expression EQ expression
   66                      | expression NE expression
   67                      | expression LT expression
   68                      | expression LE expression
   69                      | expression GE expression
   70                      | expression GT expression

   71 logical_expression: expression AND expression
   72                   | expression OR expression
   73                   | NOT expression

   74 function_call_expression: IDENTIFIER LPAREN args RPAREN

   75 dereference_expression: DEREFERENCE IDENTIFIER
   76                       | DEREFERENCE LPAREN expression RPAREN

   77 args: args COMMA expression
   78     | arg

   79 arg: expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROCEDURE (258) 10
    FUNCTION (259) 11
    RUN (260) 43
    IF (261) 46
    ELSE (262) 44
    WHILE (263) 47
    FOR (264) 48
    FROM (265) 48
    TO (266) 48
    BY (267) 48
    RETURN (268) 49
    PERIOD (269) 39 40 41 42 43 49
    COLON (270) 50
    LPAREN (271) 12 28 43 46 47 48 59 74 76
    RPAREN (272) 12 28 43 46 47 59 74 76
    LBRACE (273) 14 47 48
    RBRACE (274) 15 47 48
    LARROW (275) 39 41
    RARROW (276) 9 42
    COMMA (277) 16 77
    DEREFERENCE (278) 75 76
    PLUS (279) 60
    TIMES (280) 62
    DIV (281) 63
    MOD (282) 64
    EQ (283) 65
    NE (284) 66
    LT (285) 67
    LE (286) 68
    GE (287) 69
    GT (288) 70
    AND (289) 71
    OR (290) 72
    NOT (291) 73
    BOOLEAN_TYPE <type_id> (292)
    INT1_TYPE <type_id> (293) 20
    UINT1_TYPE <type_id> (294) 21
    INT2_TYPE <type_id> (295) 22
    UINT2_TYPE <type_id> (296) 23
    INT4_TYPE <type_id> (297) 24
    UINT4_TYPE <type_id> (298) 25
    INT8_TYPE <type_id> (299) 26
    UINT8_TYPE <type_id> (300) 27
    ADDRESS_TYPE <type_id> (301) 28
    IDENTIFIER <info> (302) 10 11 41 42 43 50 58 74 75
    NUMBER <info> (303) 57
    MINUS <info> (304) 56 61
    UMINUS (305)


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    program (52)
        on left: 1
        on right: 0
    unit_definitions (53)
        on left: 2 3
        on right: 1 2
    unit_definition (54)
        on left: 4 5
        on right: 2 3
    procedure_definition (55)
        on left: 6
        on right: 4
    function_definition (56)
        on left: 7
        on right: 5
    procedure_head (57)
        on left: 8
        on right: 6
    function_head (58)
        on left: 9
        on right: 7
    procedure_id <info> (59)
        on left: 10
        on right: 8
    function_id <info> (60)
        on left: 11
        on right: 9
    params_list (61)
        on left: 12
        on right: 8 9
    block (62)
        on left: 13
        on right: 6 7 38 44 45
    block_start (63)
        on left: 14
        on right: 13
    block_rest (64)
        on left: 15
        on right: 13
    params (65)
        on left: 16 17 18
        on right: 12 16
    param <info> (66)
        on left: 19
        on right: 16 17
    type_expression <type_id> (67)
        on left: 20 21 22 23 24 25 26 27 28
        on right: 9 28 50
    statements (68)
        on left: 29 30
        on right: 15 29 48
    statement (69)
        on left: 31 32 33 34 35 36 37 38
        on right: 29 30
    initialized_variable_declaration_statement (70)
        on left: 39
        on right: 31
    variable_declaration_statement (71)
        on left: 40
        on right: 32
    assignment_statement (72)
        on left: 41 42
        on right: 33
    procedure_call_statement (73)
        on left: 43
        on right: 34
    conditional_statement (74)
        on left: 44 45
        on right: 35
    condition_head (75)
        on left: 46
        on right: 44 45
    iteration_statement (76)
        on left: 47 48
        on right: 36
    return_statement (77)
        on left: 49
        on right: 37
    variable_declaration <info> (78)
        on left: 50
        on right: 19 39 40 48
    expression <info> (79)
        on left: 51 52 53 54 55 56 57 58 59
        on right: 39 41 42 46 47 48 49 56 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 76 77 79
    arithmetic_expression <info> (80)
        on left: 60 61 62 63 64
        on right: 51
    relational_expression <info> (81)
        on left: 65 66 67 68 69 70
        on right: 52
    logical_expression <info> (82)
        on left: 71 72 73
        on right: 53
    function_call_expression <info> (83)
        on left: 74
        on right: 54
    dereference_expression <info> (84)
        on left: 75 76
        on right: 55
    args (85)
        on left: 77 78
        on right: 43 74 77
    arg <info> (86)
        on left: 79
        on right: 78


State 0

    0 $accept: • program $end

    PROCEDURE  shift, and go to state 1
    FUNCTION   shift, and go to state 2

    program               go to state 3
    unit_definitions      go to state 4
    unit_definition       go to state 5
    procedure_definition  go to state 6
    function_definition   go to state 7
    procedure_head        go to state 8
    function_head         go to state 9
    procedure_id          go to state 10
    function_id           go to state 11


State 1

   10 procedure_id: PROCEDURE • IDENTIFIER

    IDENTIFIER  shift, and go to state 12


State 2

   11 function_id: FUNCTION • IDENTIFIER

    IDENTIFIER  shift, and go to state 13


State 3

    0 $accept: program • $end

    $end  shift, and go to state 14


State 4

    1 program: unit_definitions •
    2 unit_definitions: unit_definitions • unit_definition

    PROCEDURE  shift, and go to state 1
    FUNCTION   shift, and go to state 2

    $default  reduce using rule 1 (program)

    unit_definition       go to state 15
    procedure_definition  go to state 6
    function_definition   go to state 7
    procedure_head        go to state 8
    function_head         go to state 9
    procedure_id          go to state 10
    function_id           go to state 11


State 5

    3 unit_definitions: unit_definition •

    $default  reduce using rule 3 (unit_definitions)


State 6

    4 unit_definition: procedure_definition •

    $default  reduce using rule 4 (unit_definition)


State 7

    5 unit_definition: function_definition •

    $default  reduce using rule 5 (unit_definition)


State 8

    6 procedure_definition: procedure_head • block

    LBRACE  shift, and go to state 16

    block        go to state 17
    block_start  go to state 18


State 9

    7 function_definition: function_head • block

    LBRACE  shift, and go to state 16

    block        go to state 19
    block_start  go to state 18


State 10

    8 procedure_head: procedure_id • params_list

    LPAREN  shift, and go to state 20

    params_list  go to state 21


State 11

    9 function_head: function_id • params_list RARROW type_expression

    LPAREN  shift, and go to state 20

    params_list  go to state 22


State 12

   10 procedure_id: PROCEDURE IDENTIFIER •

    $default  reduce using rule 10 (procedure_id)


State 13

   11 function_id: FUNCTION IDENTIFIER •

    $default  reduce using rule 11 (function_id)


State 14

    0 $accept: program $end •

    $default  accept


State 15

    2 unit_definitions: unit_definitions unit_definition •

    $default  reduce using rule 2 (unit_definitions)


State 16

   14 block_start: LBRACE •

    $default  reduce using rule 14 (block_start)


State 17

    6 procedure_definition: procedure_head block •

    $default  reduce using rule 6 (procedure_definition)


State 18

   13 block: block_start • block_rest

    RUN          shift, and go to state 23
    IF           shift, and go to state 24
    WHILE        shift, and go to state 25
    FOR          shift, and go to state 26
    RETURN       shift, and go to state 27
    LPAREN       shift, and go to state 28
    LBRACE       shift, and go to state 16
    DEREFERENCE  shift, and go to state 29
    NOT          shift, and go to state 30
    IDENTIFIER   shift, and go to state 31
    NUMBER       shift, and go to state 32
    MINUS        shift, and go to state 33

    block                                       go to state 34
    block_start                                 go to state 18
    block_rest                                  go to state 35
    statements                                  go to state 36
    statement                                   go to state 37
    initialized_variable_declaration_statement  go to state 38
    variable_declaration_statement              go to state 39
    assignment_statement                        go to state 40
    procedure_call_statement                    go to state 41
    conditional_statement                       go to state 42
    condition_head                              go to state 43
    iteration_statement                         go to state 44
    return_statement                            go to state 45
    variable_declaration                        go to state 46
    expression                                  go to state 47
    arithmetic_expression                       go to state 48
    relational_expression                       go to state 49
    logical_expression                          go to state 50
    function_call_expression                    go to state 51
    dereference_expression                      go to state 52


State 19

    7 function_definition: function_head block •

    $default  reduce using rule 7 (function_definition)


State 20

   12 params_list: LPAREN • params RPAREN

    IDENTIFIER  shift, and go to state 53

    $default  reduce using rule 18 (params)

    params                go to state 54
    param                 go to state 55
    variable_declaration  go to state 56


State 21

    8 procedure_head: procedure_id params_list •

    $default  reduce using rule 8 (procedure_head)


State 22

    9 function_head: function_id params_list • RARROW type_expression

    RARROW  shift, and go to state 57


State 23

   43 procedure_call_statement: RUN • IDENTIFIER LPAREN args RPAREN PERIOD

    IDENTIFIER  shift, and go to state 58


State 24

   46 condition_head: IF • LPAREN expression RPAREN

    LPAREN  shift, and go to state 59


State 25

   47 iteration_statement: WHILE • LPAREN expression RPAREN LBRACE expression RBRACE

    LPAREN  shift, and go to state 60


State 26

   48 iteration_statement: FOR • LPAREN variable_declaration FROM expression TO expression BY expression LBRACE statements RBRACE

    LPAREN  shift, and go to state 61


State 27

   49 return_statement: RETURN • expression PERIOD

    LPAREN       shift, and go to state 28
    DEREFERENCE  shift, and go to state 29
    NOT          shift, and go to state 30
    IDENTIFIER   shift, and go to state 62
    NUMBER       shift, and go to state 32
    MINUS        shift, and go to state 33

    expression                go to state 63
    arithmetic_expression     go to state 48
    relational_expression     go to state 49
    logical_expression        go to state 50
    function_call_expression  go to state 51
    dereference_expression    go to state 52


State 28

   59 expression: LPAREN • expression RPAREN

    LPAREN       shift, and go to state 28
    DEREFERENCE  shift, and go to state 29
    NOT          shift, and go to state 30
    IDENTIFIER   shift, and go to state 62
    NUMBER       shift, and go to state 32
    MINUS        shift, and go to state 33

    expression                go to state 64
    arithmetic_expression     go to state 48
    relational_expression     go to state 49
    logical_expression        go to state 50
    function_call_expression  go to state 51
    dereference_expression    go to state 52


State 29

   75 dereference_expression: DEREFERENCE • IDENTIFIER
   76                       | DEREFERENCE • LPAREN expression RPAREN

    LPAREN      shift, and go to state 65
    IDENTIFIER  shift, and go to state 66


State 30

   73 logical_expression: NOT • expression

    LPAREN       shift, and go to state 28
    DEREFERENCE  shift, and go to state 29
    NOT          shift, and go to state 30
    IDENTIFIER   shift, and go to state 62
    NUMBER       shift, and go to state 32
    MINUS        shift, and go to state 33

    expression                go to state 67
    arithmetic_expression     go to state 48
    relational_expression     go to state 49
    logical_expression        go to state 50
    function_call_expression  go to state 51
    dereference_expression    go to state 52


State 31

   41 assignment_statement: IDENTIFIER • LARROW expression PERIOD
   50 variable_declaration: IDENTIFIER • COLON type_expression
   58 expression: IDENTIFIER •
   74 function_call_expression: IDENTIFIER • LPAREN args RPAREN

    COLON   shift, and go to state 68
    LPAREN  shift, and go to state 69
    LARROW  shift, and go to state 70

    $default  reduce using rule 58 (expression)


State 32

   57 expression: NUMBER •

    $default  reduce using rule 57 (expression)


State 33

   56 expression: MINUS • expression

    LPAREN       shift, and go to state 28
    DEREFERENCE  shift, and go to state 29
    NOT          shift, and go to state 30
    IDENTIFIER   shift, and go to state 62
    NUMBER       shift, and go to state 32
    MINUS        shift, and go to state 33

    expression                go to state 71
    arithmetic_expression     go to state 48
    relational_expression     go to state 49
    logical_expression        go to state 50
    function_call_expression  go to state 51
    dereference_expression    go to state 52


State 34

   38 statement: block •

    $default  reduce using rule 38 (statement)


State 35

   13 block: block_start block_rest •

    $default  reduce using rule 13 (block)


State 36

   15 block_rest: statements • RBRACE
   29 statements: statements • statement

    RUN          shift, and go to state 23
    IF           shift, and go to state 24
    WHILE        shift, and go to state 25
    FOR          shift, and go to state 26
    RETURN       shift, and go to state 27
    LPAREN       shift, and go to state 28
    LBRACE       shift, and go to state 16
    RBRACE       shift, and go to state 72
    DEREFERENCE  shift, and go to state 29
    NOT          shift, and go to state 30
    IDENTIFIER   shift, and go to state 31
    NUMBER       shift, and go to state 32
    MINUS        shift, and go to state 33

    block                                       go to state 34
    block_start                                 go to state 18
    statement                                   go to state 73
    initialized_variable_declaration_statement  go to state 38
    variable_declaration_statement              go to state 39
    assignment_statement                        go to state 40
    procedure_call_statement                    go to state 41
    conditional_statement                       go to state 42
    condition_head                              go to state 43
    iteration_statement                         go to state 44
    return_statement                            go to state 45
    variable_declaration                        go to state 46
    expression                                  go to state 47
    arithmetic_expression                       go to state 48
    relational_expression                       go to state 49
    logical_expression                          go to state 50
    function_call_expression                    go to state 51
    dereference_expression                      go to state 52


State 37

   30 statements: statement •

    $default  reduce using rule 30 (statements)


State 38

   31 statement: initialized_variable_declaration_statement •

    $default  reduce using rule 31 (statement)


State 39

   32 statement: variable_declaration_statement •

    $default  reduce using rule 32 (statement)


State 40

   33 statement: assignment_statement •

    $default  reduce using rule 33 (statement)


State 41

   34 statement: procedure_call_statement •

    $default  reduce using rule 34 (statement)


State 42

   35 statement: conditional_statement •

    $default  reduce using rule 35 (statement)


State 43

   44 conditional_statement: condition_head • block ELSE block
   45                      | condition_head • block

    LBRACE  shift, and go to state 16

    block        go to state 74
    block_start  go to state 18


State 44

   36 statement: iteration_statement •

    $default  reduce using rule 36 (statement)


State 45

   37 statement: return_statement •

    $default  reduce using rule 37 (statement)


State 46

   39 initialized_variable_declaration_statement: variable_declaration • LARROW expression PERIOD
   40 variable_declaration_statement: variable_declaration • PERIOD

    PERIOD  shift, and go to state 75
    LARROW  shift, and go to state 76


State 47

   42 assignment_statement: expression • RARROW IDENTIFIER PERIOD
   60 arithmetic_expression: expression • PLUS expression
   61                      | expression • MINUS expression
   62                      | expression • TIMES expression
   63                      | expression • DIV expression
   64                      | expression • MOD expression
   65 relational_expression: expression • EQ expression
   66                      | expression • NE expression
   67                      | expression • LT expression
   68                      | expression • LE expression
   69                      | expression • GE expression
   70                      | expression • GT expression
   71 logical_expression: expression • AND expression
   72                   | expression • OR expression

    RARROW  shift, and go to state 77
    PLUS    shift, and go to state 78
    TIMES   shift, and go to state 79
    DIV     shift, and go to state 80
    MOD     shift, and go to state 81
    EQ      shift, and go to state 82
    NE      shift, and go to state 83
    LT      shift, and go to state 84
    LE      shift, and go to state 85
    GE      shift, and go to state 86
    GT      shift, and go to state 87
    AND     shift, and go to state 88
    OR      shift, and go to state 89
    MINUS   shift, and go to state 90


State 48

   51 expression: arithmetic_expression •

    $default  reduce using rule 51 (expression)


State 49

   52 expression: relational_expression •

    $default  reduce using rule 52 (expression)


State 50

   53 expression: logical_expression •

    $default  reduce using rule 53 (expression)


State 51

   54 expression: function_call_expression •

    $default  reduce using rule 54 (expression)


State 52

   55 expression: dereference_expression •

    $default  reduce using rule 55 (expression)


State 53

   50 variable_declaration: IDENTIFIER • COLON type_expression

    COLON  shift, and go to state 68


State 54

   12 params_list: LPAREN params • RPAREN
   16 params: params • COMMA param

    RPAREN  shift, and go to state 91
    COMMA   shift, and go to state 92


State 55

   17 params: param •

    $default  reduce using rule 17 (params)


State 56

   19 param: variable_declaration •

    $default  reduce using rule 19 (param)


State 57

    9 function_head: function_id params_list RARROW • type_expression

    INT1_TYPE     shift, and go to state 93
    UINT1_TYPE    shift, and go to state 94
    INT2_TYPE     shift, and go to state 95
    UINT2_TYPE    shift, and go to state 96
    INT4_TYPE     shift, and go to state 97
    UINT4_TYPE    shift, and go to state 98
    INT8_TYPE     shift, and go to state 99
    UINT8_TYPE    shift, and go to state 100
    ADDRESS_TYPE  shift, and go to state 101

    type_expression  go to state 102


State 58

   43 procedure_call_statement: RUN IDENTIFIER • LPAREN args RPAREN PERIOD

    LPAREN  shift, and go to state 103


State 59

   46 condition_head: IF LPAREN • expression RPAREN

    LPAREN       shift, and go to state 28
    DEREFERENCE  shift, and go to state 29
    NOT          shift, and go to state 30
    IDENTIFIER   shift, and go to state 62
    NUMBER       shift, and go to state 32
    MINUS        shift, and go to state 33

    expression                go to state 104
    arithmetic_expression     go to state 48
    relational_expression     go to state 49
    logical_expression        go to state 50
    function_call_expression  go to state 51
    dereference_expression    go to state 52


State 60

   47 iteration_statement: WHILE LPAREN • expression RPAREN LBRACE expression RBRACE

    LPAREN       shift, and go to state 28
    DEREFERENCE  shift, and go to state 29
    NOT          shift, and go to state 30
    IDENTIFIER   shift, and go to state 62
    NUMBER       shift, and go to state 32
    MINUS        shift, and go to state 33

    expression                go to state 105
    arithmetic_expression     go to state 48
    relational_expression     go to state 49
    logical_expression        go to state 50
    function_call_expression  go to state 51
    dereference_expression    go to state 52


State 61

   48 iteration_statement: FOR LPAREN • variable_declaration FROM expression TO expression BY expression LBRACE statements RBRACE

    IDENTIFIER  shift, and go to state 53

    variable_declaration  go to state 106


State 62

   58 expression: IDENTIFIER •
   74 function_call_expression: IDENTIFIER • LPAREN args RPAREN

    LPAREN  shift, and go to state 69

    $default  reduce using rule 58 (expression)


State 63

   49 return_statement: RETURN expression • PERIOD
   60 arithmetic_expression: expression • PLUS expression
   61                      | expression • MINUS expression
   62                      | expression • TIMES expression
   63                      | expression • DIV expression
   64                      | expression • MOD expression
   65 relational_expression: expression • EQ expression
   66                      | expression • NE expression
   67                      | expression • LT expression
   68                      | expression • LE expression
   69                      | expression • GE expression
   70                      | expression • GT expression
   71 logical_expression: expression • AND expression
   72                   | expression • OR expression

    PERIOD  shift, and go to state 107
    PLUS    shift, and go to state 78
    TIMES   shift, and go to state 79
    DIV     shift, and go to state 80
    MOD     shift, and go to state 81
    EQ      shift, and go to state 82
    NE      shift, and go to state 83
    LT      shift, and go to state 84
    LE      shift, and go to state 85
    GE      shift, and go to state 86
    GT      shift, and go to state 87
    AND     shift, and go to state 88
    OR      shift, and go to state 89
    MINUS   shift, and go to state 90


State 64

   59 expression: LPAREN expression • RPAREN
   60 arithmetic_expression: expression • PLUS expression
   61                      | expression • MINUS expression
   62                      | expression • TIMES expression
   63                      | expression • DIV expression
   64                      | expression • MOD expression
   65 relational_expression: expression • EQ expression
   66                      | expression • NE expression
   67                      | expression • LT expression
   68                      | expression • LE expression
   69                      | expression • GE expression
   70                      | expression • GT expression
   71 logical_expression: expression • AND expression
   72                   | expression • OR expression

    RPAREN  shift, and go to state 108
    PLUS    shift, and go to state 78
    TIMES   shift, and go to state 79
    DIV     shift, and go to state 80
    MOD     shift, and go to state 81
    EQ      shift, and go to state 82
    NE      shift, and go to state 83
    LT      shift, and go to state 84
    LE      shift, and go to state 85
    GE      shift, and go to state 86
    GT      shift, and go to state 87
    AND     shift, and go to state 88
    OR      shift, and go to state 89
    MINUS   shift, and go to state 90


State 65

   76 dereference_expression: DEREFERENCE LPAREN • expression RPAREN

    LPAREN       shift, and go to state 28
    DEREFERENCE  shift, and go to state 29
    NOT          shift, and go to state 30
    IDENTIFIER   shift, and go to state 62
    NUMBER       shift, and go to state 32
    MINUS        shift, and go to state 33

    expression                go to state 109
    arithmetic_expression     go to state 48
    relational_expression     go to state 49
    logical_expression        go to state 50
    function_call_expression  go to state 51
    dereference_expression    go to state 52


State 66

   75 dereference_expression: DEREFERENCE IDENTIFIER •

    $default  reduce using rule 75 (dereference_expression)


State 67

   60 arithmetic_expression: expression • PLUS expression
   61                      | expression • MINUS expression
   62                      | expression • TIMES expression
   63                      | expression • DIV expression
   64                      | expression • MOD expression
   65 relational_expression: expression • EQ expression
   66                      | expression • NE expression
   67                      | expression • LT expression
   68                      | expression • LE expression
   69                      | expression • GE expression
   70                      | expression • GT expression
   71 logical_expression: expression • AND expression
   72                   | expression • OR expression
   73                   | NOT expression •

    $default  reduce using rule 73 (logical_expression)


State 68

   50 variable_declaration: IDENTIFIER COLON • type_expression

    INT1_TYPE     shift, and go to state 93
    UINT1_TYPE    shift, and go to state 94
    INT2_TYPE     shift, and go to state 95
    UINT2_TYPE    shift, and go to state 96
    INT4_TYPE     shift, and go to state 97
    UINT4_TYPE    shift, and go to state 98
    INT8_TYPE     shift, and go to state 99
    UINT8_TYPE    shift, and go to state 100
    ADDRESS_TYPE  shift, and go to state 101

    type_expression  go to state 110


State 69

   74 function_call_expression: IDENTIFIER LPAREN • args RPAREN

    LPAREN       shift, and go to state 28
    DEREFERENCE  shift, and go to state 29
    NOT          shift, and go to state 30
    IDENTIFIER   shift, and go to state 62
    NUMBER       shift, and go to state 32
    MINUS        shift, and go to state 33

    expression                go to state 111
    arithmetic_expression     go to state 48
    relational_expression     go to state 49
    logical_expression        go to state 50
    function_call_expression  go to state 51
    dereference_expression    go to state 52
    args                      go to state 112
    arg                       go to state 113


State 70

   41 assignment_statement: IDENTIFIER LARROW • expression PERIOD

    LPAREN       shift, and go to state 28
    DEREFERENCE  shift, and go to state 29
    NOT          shift, and go to state 30
    IDENTIFIER   shift, and go to state 62
    NUMBER       shift, and go to state 32
    MINUS        shift, and go to state 33

    expression                go to state 114
    arithmetic_expression     go to state 48
    relational_expression     go to state 49
    logical_expression        go to state 50
    function_call_expression  go to state 51
    dereference_expression    go to state 52


State 71

   56 expression: MINUS expression •
   60 arithmetic_expression: expression • PLUS expression
   61                      | expression • MINUS expression
   62                      | expression • TIMES expression
   63                      | expression • DIV expression
   64                      | expression • MOD expression
   65 relational_expression: expression • EQ expression
   66                      | expression • NE expression
   67                      | expression • LT expression
   68                      | expression • LE expression
   69                      | expression • GE expression
   70                      | expression • GT expression
   71 logical_expression: expression • AND expression
   72                   | expression • OR expression

    $default  reduce using rule 56 (expression)


State 72

   15 block_rest: statements RBRACE •

    $default  reduce using rule 15 (block_rest)


State 73

   29 statements: statements statement •

    $default  reduce using rule 29 (statements)


State 74

   44 conditional_statement: condition_head block • ELSE block
   45                      | condition_head block •

    ELSE  shift, and go to state 115

    $default  reduce using rule 45 (conditional_statement)


State 75

   40 variable_declaration_statement: variable_declaration PERIOD •

    $default  reduce using rule 40 (variable_declaration_statement)


State 76

   39 initialized_variable_declaration_statement: variable_declaration LARROW • expression PERIOD

    LPAREN       shift, and go to state 28
    DEREFERENCE  shift, and go to state 29
    NOT          shift, and go to state 30
    IDENTIFIER   shift, and go to state 62
    NUMBER       shift, and go to state 32
    MINUS        shift, and go to state 33
